metadata/force-app/main/default/objects/CustomName_twVCH__c/CustomName_twVCH__c.object-meta.xml
<CustomObject>
    <description>Description_TnULc</description>
    <label>CustomLabel_KVKoZ</label>
    <nameField>
        <label>CustomLabel_KVKoZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_KVKoZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>