metadata/force-app/main/default/objects/CustomName_twVCH__c/fields/CustomField_NlGNW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_NlGNW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUXIrD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>