metadata/force-app/main/default/objects/CustomName_twVCH__c/fields/CustomField_Teyas__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Teyas__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmQzDk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>